--- a/now.json
+++ b/now.json
@@ -1,6 +1,8 @@
 {
     "version": 2,
+    "name": "nextjs with custom server",
     "builds": [
+      { "src": "server.js", "use": "@now/node-server" },
       { "src": "package.json", "use": "@now/next" }
     ]
   }
